--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">SCNotesApp</string>
     <string name="app_title">Simplified Coding Notes Application</string>
+    <string name="title_hint">Enter Title..</string>
+    <string name="content_hint">Enter Content...</string>
+    <string name="create_note_text">Create Note</string>
+    <string name="save_note_text">Save Note</string>
+    <string name="edit_note_text">Edit Note</string>
+    <string name="delete_note_btn">Delete Note</string>
+    <string name="notes_text">Notes</string>
+    <string name="details_text">Details</string>
+    <string name="update_notes_text">Update Notes</string>
 </resources>
